--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/src/index.js">
+<meta http-equiv="refresh" content="0; url=https://tdonovan79.github.io/src/index.js">
